--- a/presentation/document.tex
+++ b/presentation/document.tex
@@ -18,6 +18,8 @@
 \def\newblock{\beamer@newblock}
 \makeatother
 \usepackage{color}
+\usepackage{graphicx}
+\usepackage{epstopdf}
 
 \definecolor{CASblue}{rgb}{0.611764706, 0.76862745098, 0.95294117647}
 \setbeamercolor{frametitle}{fg=CASblue}
