Working on pres

--- a/presentation/document.tex
+++ b/presentation/document.tex
@@ -108,7 +108,7 @@
 		In order to find the linerar contribution of each sample in the overall time, we have used the \textit{Pearson Correlation Coefficient} as an estimator. It has proved to be really effective for our needs, working on the realizations of a random variable.
 	\end{block}
 	\begin{center}
-		\includegraphics[]{./graphics/polito}
+		\includegraphics[width=6cm]{./graphics/rand_distr}
 	\end{center}
 \end{frame}
 
