--- a/presentation/document.tex
+++ b/presentation/document.tex
@@ -301,6 +301,17 @@ recent slide belongs to is highlighted
     \end{block}
 \end{frame}
 
+\begin{frame}{Future expectations}
+  \begin{block}{What more}
+    \begin{itemize}
+      \item porting the attack in C++ to keep class structure and speedup w.r. to Python
+      \item find an optimal filter and explain the strange behavior of the implemented filter
+
+    \end{itemize}
+
+  \end{block}
+\end{frame}
+
 \begin{frame}[allowframebreaks]
 	\frametitle{References}
 %\Large{References} \\[0.5cm]
