--- a/presentation/document.tex
+++ b/presentation/document.tex
@@ -12,6 +12,7 @@
 \usepackage{apalike}
 \usepackage{floatrow}
 \usepackage{wasysym}
+\usepackage{hyperref}
 \usepackage[absolute,overlay]{textpos}
 %\usepackage[version=4]{mhchem}
 \usepackage[long,nodayofweek,level,12hr]{datetime}
