--- a/presentation/document.tex
+++ b/presentation/document.tex
@@ -1,4 +1,4 @@
-\documentclass{beamer}
+\documentclass[aspectratio=169, handout]{beamer}
 \mode<presentation>
 
 \usepackage{header_footer}
@@ -300,6 +300,27 @@
     \end{block}
     \hfill \includegraphics[width=2cm]{./graphics/algorithm}
 \end{frame}
+
+\begin{frame}[c]{Demo time}
+  \begin{minipage}[c]{0.55\textwidth}
+      \begin{center}
+        Here's an example with:
+        \begin{itemize}
+          \item 128 bit keys
+          \item 10000 x (plaintext, time)
+          \item \textit{C} attack version
+        \end{itemize}
+      \end{center}
+  \end{minipage}
+  \hfill
+  \begin{minipage}[t]{0.4\textwidth}
+    \vfill
+      \begin{center}
+        \includegraphics[height=3cm]{./graphics/terminal}
+      \end{center}
+  \end{minipage}
+\end{frame}
+%--- Next Frame ---%
 
 \begin{frame}[allowframebreaks]{Attack - Pseudocode}
   \scriptsize
