this is the real final

--- a/presentation/document.tex
+++ b/presentation/document.tex
@@ -1,4 +1,4 @@
-\documentclass[aspectratio=169, handout]{beamer}
+\documentclass[aspectratio=169]{beamer}
 \mode<presentation>
 
 \usepackage{header_footer}
@@ -188,7 +188,7 @@
 			\pause \item copy the executable on the Zybo board
 		\end{itemize}
     \begin{center}
-      \includegraphics[width=4cm]{./graphics/zybo}
+      \includegraphics[width=3.5cm]{./graphics/zybo}
     \end{center}
 	\end{block}
 \end{frame}
@@ -398,10 +398,9 @@
 			\pause \item with an OS, more tuples (cipher, timing) are needed
 			\pause \item the attack is still feasible
 		\end{itemize}
-    We have completely tested what is mentioned above. For the OS case, it is relevant to mention that 10 measurements for each encryption are taken, and the smallest is the only considered.
-    \begin{center}
-      \includegraphics[width=4cm]{./graphics/pc}
-    \end{center}
+    We have completely tested what is mentioned above. For the OS case, it is relevant to mention that 10 measurements for each encryption are taken, and the smallest is the only considered.\\
+    \hfill
+    \includegraphics[width=2.8cm]{./graphics/pc}
 	\end{block}
 \end{frame}
 
