--- a/presentation/document.tex
+++ b/presentation/document.tex
@@ -320,7 +320,7 @@
       \end{center}
   \end{minipage}
 \end{frame}
-%--- Next Frame ---%
+
 
 \begin{frame}[allowframebreaks]{Attack - Pseudocode}
   \scriptsize
@@ -423,11 +423,26 @@
 		The proposed countermeasure is the one given in \cite{kocher1996timing}.
 		It consists in blinding the message before the encryption using a couple of values $v_f, v_i$ chosen in such a way that:
 		\begin{equation*}
-			v_i^e \cdot v_f mod\: N = 1
+			v_i^e \cdot v_f \bmod N = 1
 		\end{equation*}
         This contermeasure, in all our tests, has proven to be really effective. Ciphers are completely masked, no correlation can be identified.
     \end{block}
 \end{frame}
+
+\begin{frame}[c]{Overhead}
+  \begin{block}{Almost no perfomance decrease...}
+    Since we are operating in Montgomery domain, we already have an initial operation on the message. It can be combined with the blinding as follows:
+    \begin{equation*}
+      P_{blind}^{MD} = P \cdot ( R^2 \cdot V_i ) \cdot R^{-1} \bmod N
+    \end{equation*}
+    The value $R^2 \cdot V_i$ can be computed offline.
+    A similar operation can be done at the final conversion to exit the Montgomery domain:
+    \begin{equation*}
+      C = C_{blind}^{MD} \cdot V_f \cdot R^{-1} \bmod N
+    \end{equation*}
+  \end{block}
+\end{frame}
+%--- Next Frame ---%
 
 \section{Future Improvements}
 \begin{frame}{Future expectations}
