Starting point for copyright

--- a/presentation/document.tex
+++ b/presentation/document.tex
@@ -1,4 +1,4 @@
-\documentclass[aspectratio=169]{beamer}
+\documentclass[aspectratio=43]{beamer}
 \mode<presentation>
 
 \usepackage{header_footer}
@@ -275,7 +275,7 @@
 \begin{frame}{Algorithm}
     \begin{block}{Development}
         \begin{itemize}
-            \pause \item Started in Python to allow better flexibility and library support (infinite precion, \texttt{scipy.stats})
+            \pause \item Started in Python to allow better flexibility and library support (infinite precision, \texttt{scipy.stats})
             \pause \item At first, attacking conditional Montgomery Mult., 1 bit at-a-time, using fixed threshold
             \pause \item Move on to attack both MM to improve statistical relevance of 0 guesses
             \pause \item Get rid of fixed threshold by:
