--- a/presentation/document.tex
+++ b/presentation/document.tex
@@ -26,7 +26,7 @@
 \usepackage{color}
 \usepackage{lipsum}
 \usepackage{graphicx}
-\usepackage{epstopdf}
+%\usepackage{epstopdf}
 
 \definecolor{CASblue}{rgb}{0.611764706, 0.76862745098, 0.95294117647}
 \setbeamercolor{frametitle}{fg=CASblue}
